# MyMediaPlayer

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  MyPlayer.cpp  MyPlayer.h  VideoChannel.cpp  VideoChannel.h  log4c.h  native-lib.cpp  safe_queue.h  util.h
app/src/main/java/com/example/mymediaplayer/: MainActivity.java  MyPlayer.java
app/src/main/res/layout/: activity_main.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
